--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "nd-0067-c1-building-a-server-project-starter",
   "version": "1.0.0",
-  "description": "This project aims to give you a real-world scenario in which you would read and write to your disk via a Node.js extierss server rather than a database. The project you create serves two purposes: to prepare you for setting up scalable code and architecture for real-world projects and tie together some of the most popular middleware and utilities found in Node.js projects. This project barely touches the surface of what is possible but will prove your ability to use what you’ve learned in real-world scenarios.",
+  "description": "This project aims to give you a real-world scenario in which you would read and write to your disk via a Node.js server rather than a database. The project you create serves two purposes: to prepare you for setting up scalable code and architecture for real-world projects and tie together some of the most popular middleware and utilities found in Node.js projects. This project barely touches the surface of what is possible but will prove your ability to use what you’ve learned in real-world scenarios.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
-    "build": "npx tsc",
-    "lint": "eslint . --ext .ts,.tsx"
+    "start": "ts-node-dev --respawn --transpile-only ./src/index.ts",
+    "build": "npx tsc && node ./build/index.js",
+    "lint": "eslint . --ext .ts,.tsx",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -15,16 +16,23 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/fs-extra": "^9.0.11",
+    "@types/jest": "^26.0.23",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.6.1",
     "@types/sharp": "^0.28.3",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "~7.27.0",
     "eslint-config-prettier": "~8.3.0",
-    "nodemon": "^2.0.7",
+    "fs-extra": "^10.0.0",
+    "jest": "^27.0.4",
     "prettier": "~2.3.0",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.6",
     "typescript": "~4.3.2"
   }
 }
