--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "none",
+  "printWidth": 120,
+  "trailingComma": "all",
+  "tabWidth": 2,
   "overrides": [
     {
       "files": "*.ts",
