--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,6 +69,6 @@
     "allowUnusedLabels": false,
     "pretty": true,
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": ["src/**/*.ts", "jest.config.ts"],
+  "exclude": ["node_modules"]
 }
