--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.17.1",
     "husky": "^6.0.0",
     "morgan": "^1.10.0",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "fs-extra": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
@@ -34,7 +35,6 @@
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "~7.27.0",
     "eslint-config-prettier": "~8.3.0",
-    "fs-extra": "^10.0.0",
     "jest": "^27.0.4",
     "prettier": "~2.3.0",
     "supertest": "^6.1.3",
